# etools

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  bootstrap.sh  configure.ac  entbuff.c  entmesh.txt
doc/: checklists.txt  entbuff.8  entmesh.txt  entwatch.1
src/: Makefile  Makefile.am  Makefile.in  entbuff.c  entwatch.c
